ts基本类型和语法知识入门

--- a/Typescript/文档.md
+++ b/Typescript/文档.md
@@ -22,4 +22,648 @@
        "strict": false,  
    ```
 
-3. vscode中`终端->运行任务->typescript->监视tsconfig.json`，自动编译ts文件
+3. vscode中`终端->运行任务->typescript->监视tsconfig.json`，自动编译ts文件（**这一步要注意默认的终端是cmd！我设置的终端是gitbash会报错**）
+
+## 从一个ts程序来说明TS的基本语法（类型注解、接口、类）：
+
+```javascript
+//一个接口，IPerson，由名和姓组成*
+
+*//可以理解为对一个对象进行了类型注解，并将其作为一个数据类型*
+
+*/** 
+
+*需要注意的是，下面的Person类new出来的实例对象虽然多了一个fullName属性*
+
+*但是由于它拥有IPerson接口所规定的所有属性，因此它们是兼容的* 
+
+**/*
+
+interface IPerson {
+
+ firstName: string,
+
+ lastName: string,
+
+}
+
+
+
+*//一个类，写法与ES6相同，但是可以加类型注解*
+
+class Person {
+
+ *//成员变量类型注解写前面更清楚*
+
+ firstName: string
+
+ lastName: string
+
+ fullName: string
+
+
+
+ *//构造器函数*
+
+ constructor(firstName: string, lastName: string) {
+
+  *this*.firstName = firstName
+
+  *this*.lastName = lastName
+
+  *this*.fullName = *this*.firstName + '_' + *this*.lastName
+
+ }
+
+}
+
+
+
+function showName(person: IPerson) {
+
+ console.log('hello' + person.firstName + '_' + person.lastName)
+
+}
+
+let person = new Person('Zhu', 'Zhu')
+0
+showName(person)
+```
+
+## 通过webpack打包ts
+
+## TS基础类型
+
+```js
+//布尔型boolean
+let bool: boolean = true
+console.log(bool);
+console.log('===================');
+
+
+//数值number类型
+let num: number = 10
+console.log(num);
+//num = '123' 报错
+console.log('===================');
+
+//string类型
+let str1: string = `小明`
+let str2: string = `的爸爸`
+let str3: string = `是老王`
+console.log(`${str1}${str2}${str3}`);
+console.log('===================');
+
+//undefined和null
+let und: undefined = undefined
+let nul: null = null
+console.log(und, nul);
+//可以作为其他类型的子类型
+let num1: number = undefined
+console.log(num1);
+let strs: string = null
+console.log(strs);
+console.log('===================');
+
+//数组类型Array
+let arr1: number[] = [1, 2, 3, 4, 5] //定义方式1：数据类型[]
+let arr2: Array<number> = [100, 200, 300]//定义方式2：泛型写法  Array<数据类型>
+console.log('arr1:', arr1);
+console.log('arr2', arr2);
+console.log('===================');
+
+//元组类型tuple：在定义数组的时候，类型、位置和数据的个数一开始就已经限定了
+let arr3: [string, number, boolean] = ['小甜甜', 2.14156, true]
+console.log(arr3[0].split(''));
+console.log(arr3[1].toFixed(2));
+console.log('===================');
+
+//枚举类型:为一组数值赋予名字,如果没有给名字赋予对应的值，则从0开始递增
+//个人理解：可以看做一个双向的Map
+enum Color {
+  red = 2,
+  green = 4,
+  blue = 6,
+}
+//定义一个Color的枚举类型的变量来接受枚举的值
+let color: Color = Color.red + Color.blue
+console.log(color);
+console.log(Color[2]);
+console.log('===================');
+
+//any类型：啥都行！
+let str: any = 100
+str = '我也是100'
+console.log(str);
+let arr: any[] = [1, '哈哈哈', true]
+console.log(arr);
+console.log('===================');
+
+//void类型：通常表示没有返回值的函数，只能赋予null和undefined（他们是所有类型的子类）
+function showMsg(): void {
+  console.log('这是一个没有返回值的函数');
+}
+console.log('===================');
+
+//object类型
+let arrObj: object = []
+let fnObj: object = function () { }
+let strobj: object = new String('123')
+console.log('===================');
+
+//联合类型 Union Type：就是或
+function getString(str: string | number) {
+  return str.toString()
+}
+console.log(getString('123'));
+console.log(getString('456'));
+console.log('===================');
+
+//类型断言：程序员表示自己知道自己操作的数据类型，有两种断言方法，尖括号或as语法
+function getStringLength(str: string | number) {
+  //这样写ts会在检查阶段报错，因为str可能为number类型不存在length属性
+  /*   if (str.length) { return str.length }
+    else return str.toString().length */
+  //加入类型断言，指明操作的数据类型
+  if ((<string>str).length) return (<string>str).length
+  else return str.toString().length
+}
+console.log('===================');
+
+//类型推断：ts的自动赋类型机制，在定义赋值后会对变量赋予一个类型，如果没有定义赋值，会推断为any类型
+let a = 100
+//a = '100'//会报错
+let b//推断b是any类型
+b = 1
+b = '1'
+console.log('===================');
+```
+
+## TS接口
+
+```js
+/* 
+在 TypeScript 中，我们使用接口（Interfaces）来定义对象的类型
+接口: 是对象的状态(属性)和行为(方法)的抽象(描述)
+接口类型的对象
+    多了或者少了属性是不允许的
+    可选属性: ?
+    只读属性: readonly
+*/
+
+/* 
+需求: 创建人的对象, 需要对人的属性进行一定的约束
+  id是number类型, 必须有, 只读的
+  name是string类型, 必须有
+  age是number类型, 必须有
+  sex是string类型, 可以没有
+*/
+
+// 定义人的接口
+interface IPerson {
+  readonly id: number
+  name: string
+  age: number
+  sex?: string
+}
+
+const person1: IPerson = {
+  id: 1,
+  name: 'tom',
+  age: 20,
+  //sex: '男'
+}
+//person1.id=3 修改readonly属性会报错
+
+//函数类型：接口还可以定义函数的类型，规范函数的参数个数、类型、返回类型
+interface IsearchString {
+  (source: string, subString: string): boolean
+}
+const searchString: IsearchString = function (source: string, subString: string) {
+  return source.includes(subString)
+}
+console.log(searchString('abcd', 'abc'));
+
+//类类型：规范一个类，类通过implements关键字来接受接口规范
+interface Alice {
+  sayHi(): void,
+  sayBye(): void,
+  name: string,
+}
+interface Jack {
+  shoot(): void
+}
+
+//一个类可以接受多个接口
+class Bob implements Alice, Jack {
+  name: string
+  age: number
+  constructor(name: string) {
+    this.name = name
+  }
+  sayHi(): void {
+    console.log('hi');
+
+  }
+  sayBye(): void {
+    console.log('bye');
+  }
+  shoot(): void {
+
+  }
+}
+
+//接口继承：接口之间可以相互继承，和类一样
+interface who extends Alice, Bob {
+  newProp: string
+}
+
+console.log(new Bob('bob'));
+
+```
+
+## TS类
+
+```js
+/* 
+类的基本定义与使用
+*/
+
+class Greeter {
+  // 声明属性
+  message: string
+
+  // 构造方法
+  constructor(message: string) {
+    this.message = message
+  }
+
+  // 一般方法
+  greet(): string {
+    return 'Hello ' + this.message
+  }
+}
+
+// 创建类的实例
+const greeter = new Greeter('world')
+// 调用实例的方法
+console.log(greeter.greet())
+
+/* 
+类的继承
+*/
+
+class Person {
+  name: string
+  age: number
+  constructor(name: string = '默认名', age: number = 18) {
+    this.name = name
+    this.age = age
+  }
+  sayHi(str: string): void {
+    console.log(str + '我是' + this.name + ',' + '我的年龄是' + this.age);
+  }
+}
+
+class Stu extends Person {
+  name: string
+  age: number
+  grade: number
+  constructor(name, age, grade) {
+    super(name, age)
+    this.grade = grade
+  }
+  sayHi(): void {
+    //重写父类的sayHi方法
+    super.sayHi('嘻嘻嘻')
+    console.log('我的成绩是' + this.grade);
+  }
+}
+const person = new Person('shashigay', 17)
+const stu1 = new Stu('naruto', 18, 66)
+person.sayHi('八嘎')
+stu1.sayHi()
+
+/* 
+类的多态 :不同类型的对象（通常是父子类）针对相同的方法，产生了不同的行为（因为子类方法的重写）
+*/
+class Animal {
+  name: string
+  constructor(name: string = 'animal') {
+    this.name = name
+  }
+  run(distance: number = 5): void {
+    console.log(`${this.name}跑了${distance}m`);
+  }
+}
+class Dog extends Animal {
+  name: string
+  constructor(name: string = 'dog') {
+    super(name)
+  }
+  run(distance: number = 10): void {
+    super.run(distance)
+  }
+}
+class Pig extends Animal {
+  name: string
+  constructor(name: string = 'pig') {
+    super(name)
+  }
+  run(distance: number = 15): void {
+    super.run(distance)
+  }
+}
+
+let ani: Animal = new Animal
+let dog: Dog = new Dog
+let pig: Pig = new Pig
+
+function animalRun(instance: Animal): void {
+  instance.run()
+}
+
+animalRun(ani)
+animalRun(dog)
+animalRun(pig)
+
+/* 
+访问修饰符: 用来描述类内部的属性/方法的可访问性
+  public: 默认值, 公开的外部也可以访问
+  private: 只能类内部可以访问
+  protected: 类内部和子类可以访问
+*/
+class Test {
+  public name: string
+  protected age: number
+  constructor(name: string, age: number) {
+    this.name = name
+    this.age = age
+  }
+  private sayName_private(): void {
+    console.log(this.name);
+  }
+  public sayName_public(): void {
+    this.sayName_private()
+  }
+}
+class Test1 extends Test {
+  constructor(name: string, age: number) {
+    super(name, age)
+  }
+  public visit_Test_age(): void {
+    console.log(super.age);
+  }
+  public visit_Test1_age(): void {
+    console.log(this.age);
+  }
+}
+let test = new Test('小明', 18)
+let test1 = new Test1('富婆', 48)
+//console.log(test.sayName_private);//报错
+console.log(test.sayName_public());//正确访问
+//console.log(test.age);//报错
+console.log(test1.visit_Test_age()); //protected修饰的变量能在类内和子内中访问
+console.log(test1.visit_Test1_age());//protected修饰的变量能在类内和子内中访问
+
+
+/* 
+readonly修饰符 ：被修饰的变量只能在constrctor里面被修改，在其他地方不可被修改
+*/
+class BigMan {
+  readonly name: string
+  constructor(name: string) {
+    this.name = '熊二'
+    console.log(this.name);
+    this.name = '米奇'
+    console.log(this.name);
+    this.name = name
+  }
+}
+let bigMan: BigMan = new BigMan('YaoMing')
+console.log(bigMan.name);
+//bigMan.name = 'Shark'//报错
+
+/* 
+参数属性 
+*/
+class LittleMan {
+  //通过在构造函数参数前面添加修饰符，可以让其直接初始化为成员属性
+  constructor(readonly name: string, public age: number, private height: number) {
+
+  }
+  getHeight() {
+    return this.height
+  }
+}
+let lMan = new LittleMan('GuoJM', 38, 160)
+console.log(lMan.name, lMan.age, lMan.getHeight());
+
+/*
+ getter和setter
+  */
+class Guy {
+  constructor(public firstName: string, public lastName: string) {
+  }
+  get fullName(): string {
+    return this.firstName + '_' + this.lastName
+  }
+  set fullName(full: string) {
+    this.firstName = full.split('_')[0]
+    this.firstName = full.split('_')[1]
+  }
+}
+
+/*
+ 静态成员：存在与构造函数（类）上，不赋予原型和实例
+ */
+class HiHiHi {
+  constructor() { }
+  static sayHi() {
+    console.log('it is static')
+  }
+  sayHIHIHI() {
+    console.log('it is not static,HIHIHI');
+
+  }
+}
+let hi = new HiHiHi
+hi.sayHIHIHI()
+HiHiHi.sayHi()
+
+/* 
+  抽象类：包含抽象方法、属性，也可以包含实例方法、属性。
+  注意：抽象类不能被实例化，它的存在是为了让子类进行实例化以及实现其抽象方法
+*/
+abstract class ABS {
+
+  //抽象方法
+  abstract sayHi(): void
+  //实例方法
+  run(distance: number): void {
+    console.log('跑了' + distance + 'm');
+  }
+}
+class exact extends ABS {
+  constructor() {
+    super()
+  }
+  //抽象类定义的抽象函数要在子类中被实现
+  sayHi(): void {
+    console.log('hi');
+  }
+}
+```
+
+## TS泛型
+
+```typescript
+/* 
+何为泛型：在定义函数、接口、类的时候不能预先确定使用的数据类型，在使用时才能确定
+怎么做：留一个坑位，用的时候指定类型
+ */
+
+//泛型函数
+//需求：输入不同类型的参数，指定个数，生产数组
+function generateArr<T>(val: T, count: number): T[] {
+  let res: T[] = []
+  for (let i = 0; i < count; i++) {
+    res.push(val)
+  }
+  return res
+}
+const arrx = generateArr<number>(1, 5)
+const arrx1 = generateArr<string>('1', 5)
+const arrx2 = generateArr<boolean>(true, 5)
+
+//多个泛型的泛型函数
+function getAB<K, V>(a: K, b: V): [K, V] {
+  return [a, b]
+}
+const AB = getAB<string, number>('1', 2)
+console.log(AB);
+
+//泛型接口：接口使用泛型
+//需求：定义一个类，用来存储用户的相关信息（id，名字，年龄）
+//通过类的实例对象调用相关方法可以添加多个用户信息对象，调用getUsrId方法可以根据id获取某个指定的用户信息对象
+class Usr {
+  constructor(public name: string, public age: number, public id?: number) {
+  }
+}
+//写针对性的接口，可复用性不强
+/* interface UsrCRUD {
+  data: Usr[]
+  add(user: Usr): Usr
+  getUsrId(): number
+} */
+//写泛型接口，相当于将接口模块化
+interface IBaseCRUD<T> {
+  data: T[]
+  add(t: T): T
+  getUsrId(id: number): T
+}
+class UsrCRUD implements IBaseCRUD<Usr>{
+  data: Usr[]
+  constructor() {
+    this.data = []
+  }
+  add(usr: Usr) {
+    usr.id = Date.now() + Math.random()
+    this.data.push(usr)
+    return usr
+  }
+  getUsrId(id: number): Usr {
+    return this.data.filter(usr => usr.id == id)[0]
+  }
+}
+const usr = new Usr('韭菜用户', 18)
+const usrCRUD = new UsrCRUD()
+let { id } = usrCRUD.add(usr)
+console.log(usrCRUD.getUsrId(id));
+
+//泛型类
+//定义一个类，类中的属性值的类型不确定，方法中的参数及返回值的类型也是不确定
+class whatsClass<A, B>{
+  public prop: A
+  constructor(a: A) {
+    this.prop = a
+  }
+  public method(arg: B): A {
+    console.log(arg);
+    return this.prop
+  }
+}
+const whatsclass = new whatsClass<number, string>(3.14159)
+console.log(whatsclass.method('我也不知道这个方法干啥用的'));
+
+//泛型约束
+//试想一下这个场景：对泛型类型的参数取了length参数，由于类型不确定，该操作会报错
+//此时可以用接口的继承来实现泛型约束
+function fn<T>(x: T) {
+  //console.log(x.length);会报错
+}
+interface lengthStrict {
+  length: number
+}
+function fnInRestrict<T extends lengthStrict>(x: T) {
+  console.log(x.length);
+}
+
+fnInRestrict('12312312312')
+
+```
+
+## 声明文件
+
+引入第三方库时，提供第三方库的智能提示和代码检查的文件，通常的后缀是 `.d.ts`
+
+```typescript
+declare var jQuery: (selector: string) => any;
+
+jQuery('#foo');
+```
+
+## 内置对象
+
+JavaScript 中有很多内置对象，它们可以直接在 TypeScript 中当做定义好了的类型。
+
+内置对象是指根据标准在全局作用域（Global）上存在的对象。这里的标准是指 ECMAScript 和其他环境（比如 DOM）的标准。
+
+1. ECMAScript 的内置对象
+
+> Boolean
+> Number
+> String
+> Date
+> RegExp
+> Error
+
+```typescript
+/* 1. ECMAScript 的内置对象 */
+let b: Boolean = new Boolean(1)
+let n: Number = new Number(true)
+let s: String = new String('abc')
+let d: Date = new Date()
+let r: RegExp = /^1/
+let e: Error = new Error('error message')
+b = true
+// let bb: boolean = new Boolean(2)  // error
+```
+
+1. BOM 和 DOM 的内置对象
+
+> Window
+> Document
+> HTMLElement
+> DocumentFragment
+> Event
+> NodeList
+
+```typescript
+const div: HTMLElement = document.getElementById('test')
+const divs: NodeList = document.querySelectorAll('div')
+document.addEventListener('click', (event: MouseEvent) => {
+  console.dir(event.target)
+})
+const fragment: DocumentFragment = document.createDocumentFragment()
+```
